[gd_scene load_steps=5 format=2]

[ext_resource path="res://resource/font/puhuiti-rgular-40.tres" type="DynamicFont" id=1]
[ext_resource path="res://objects/2D/SignalPlayer/Menu.gd" type="Script" id=2]
[ext_resource path="res://resource/style/Panel.tres" type="StyleBox" id=4]
[ext_resource path="res://scenes/sounds/sound.tscn" type="PackedScene" id=5]

[node name="Menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 350.204
margin_top = 106.995
margin_right = 847.204
margin_bottom = 590.995
custom_styles/panel = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 128.0
margin_top = 43.0
margin_right = 354.0
margin_bottom = 415.0

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
margin_right = 236.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 1 )
text = "返回"

[node name="Restart" type="Button" parent="Panel/VBoxContainer"]
margin_top = 65.0
margin_right = 236.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 1 )
text = "重启场景"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
margin_top = 130.0
margin_right = 236.0
margin_bottom = 191.0
custom_fonts/font = ExtResource( 1 )
text = "主菜单"

[node name="MainMenu2" type="CheckButton" parent="Panel/VBoxContainer"]
margin_top = 195.0
margin_right = 236.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 1 )
pressed = true
text = "背景音乐"

[node name="sound" parent="." instance=ExtResource( 5 )]

[connection signal="visibility_changed" from="." to="." method="_on_Game_over_root_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="toggled" from="Panel/VBoxContainer/MainMenu2" to="." method="_on_MainMenu2_toggled"]
